--- a/Contacto.html
+++ b/Contacto.html
@@ -36,7 +36,7 @@
       <div class="formulario">
         <form id="formulario-contacto" action="" name="form">
           <div class="datos">
-            <input class="caja" type="text" id="nombre" placeholder="Escribe tu nombre">
+            <input class="caja" type="text" id="nombre" required placeholder="Escribe tu nombre">
             <label class="label" for="nombre" id="nombre">Nombre</label>
           </div>
 
